--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.2.7",
     "nodemon": "^2.0.15",
     "notyf": "^3.10.0",
-    "react-router-hash-link": "^2.4.3"
+    "react-router-hash-link": "^2.4.3",
+    "socket.io": "^4.4.1"
   }
 }
