--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^2.0.15",
     "notyf": "^3.10.0",
     "react-router-hash-link": "^2.4.3",
+    "react-use-localstorage": "^3.5.3",
     "socket.io": "^4.4.1"
   }
 }
